--- a/style.css
+++ b/style.css
@@ -6,4 +6,25 @@
 
 body {
     font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #777;
+    padding: 30px;
+}
+
+.header {
+    height: 95vh;
+    background-image: linear-gradient(to right, rgba(87, 199, 255, 0.8), rgba(0, 127, 190, 0.8));
+    background-size: cover;
+    background-position: top;
+
+}
+
+.logo-box {
+
+}
+
+.logo {
+    
 }
