--- a/style.css
+++ b/style.css
@@ -15,16 +15,17 @@ body {
 
 .header {
     height: 95vh;
-    background-image: linear-gradient(to right, rgba(87, 199, 255, 0.8), rgba(0, 127, 190, 0.8));
+    background-image: linear-gradient(to right, rgba(87, 199, 255, 0.8), rgba(0, 127, 190, 0.8) ) , url(../img/hero-img.jpg);
     background-size: cover;
     background-position: top;
 
 }
 
 .logo-box {
-
+    top: 40px;
+    left: 40px;
 }
 
 .logo {
-    
+    height: 35px;
 }
