made a clip-path for the hero img

--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
     background-size: cover;
     background-position: top;
 
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 70vh);
+
 }
 
 .logo-box {
