--- a/style.css
+++ b/style.css
@@ -18,14 +18,17 @@ body {
     background-image: linear-gradient(to right, rgba(87, 199, 255, 0.8), rgba(0, 127, 190, 0.8) ) , url(../img/hero-img.jpg);
     background-size: cover;
     background-position: top;
+    position: relative;
 
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 70vh);
 
 }
 
 .logo-box {
+    position: absolute;
     top: 40px;
     left: 40px;
+    transform: scale(200%, 200%);
 }
 
 .logo {
