--- a/style.css
+++ b/style.css
@@ -183,3 +183,28 @@ body {
         opacity: 0;
       }
 }
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+    .heading-primary-main {
+        font-size: 40px;
+        letter-spacing: 0.3em;
+    }
+
+    .heading-primary-sub {
+        font-size: 20px;
+        letter-spacing: 0.15em;
+    }
+}
+
+@media (max-width: 480px) {
+    .heading-primary-main{
+        font-size: 30px;
+        letter-spacing: 0.2em;
+    }
+
+    .heading-primary-sub {
+        font-size: 16px;
+        letter-spacing: 0.1em;
+    }
+}
